image no longer overflows when comments are open

--- a/less/uiv2.less
+++ b/less/uiv2.less
@@ -1543,8 +1543,8 @@ li .iconWithStat {
     //-ms-flex: 1;  /* IE 10 */
   //background-color: blue;
   width: 23%;
-  height: 100%;
-  position: absolute;
+  max-height: 100%;
+  //position: absolute;
   right: 0;
 }
 
